# SoundSense

./: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt  test_panns_env.py
.claude/: settings.local.json
app/: config.py  main.py
app/api/: routes.py  ws_routes.py
app/explainer/: anthropic_explainer.py  base.py  gemini_explainer.py  openai_explainer.py
app/inference/: base.py  fake_classifier.py  panns_classifier.py  panns_model.py  yamnet_classifier.py
app/models/: schemas.py
app/reasoning/: engine.py
app/scenario/: engine.py  scenarios.py
app/state/: manager.py
docs/: api_contract.md  architecture.md  reasoning_rules.md
frontend/: .gitignore  App.js  app.json  frontend_uxui_spec.md  metro.config.js  package-lock.json  package.json
frontend/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
frontend/android/app/: build.gradle  (+1 more)
frontend/android/app/src/main/jni/: CMakeLists.txt
frontend/android/app/src/main/jni/stubs/: stub.cpp
frontend/ios/: Podfile
frontend/patches/: @dr.pogodin+react-native-audio+1.13.0.patch
frontend/src/: config.js
native_modules/: INTEGRATION.md
native_modules/android/: AudioCaptureModule.kt  AudioCapturePackage.kt
native_modules/ios/: AudioCaptureModule.m  AudioCaptureModule.swift
native_modules/src/: AudioCaptureClient.ts
scripts/: download_weights.py  fetch_audioset_labels.py  final_demo_sequence.sh  run_demo_sequence.sh  soundboard.html  test_audio_inference.py  test_yamnet.py  validate_demo.py
tests/: test_reasoning.py  ws_diag.py  ws_smoke_test.py
(+19 files in other folders)
